--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nextra-docs-template",
+  "name": "papi-docs",
   "version": "0.0.1",
-  "description": "Nextra docs template",
+  "description": "PaPi docs",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
